--- a/pom.xml
+++ b/pom.xml
@@ -31,13 +31,14 @@
     </build>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.openqa.selenium.client-drivers/selenium-java-client-driver -->
+        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium.client-drivers/selenium-java-client-driver -->
         <dependency>
-            <groupId>org.openqa.selenium.client-drivers</groupId>
+            <groupId>org.seleniumhq.selenium.client-drivers</groupId>
             <artifactId>selenium-java-client-driver</artifactId>
-            <version>0.9.2</version>
+            <version>1.0.1</version>
             <scope>test</scope>
         </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
         <dependency>
