--- a/src/main/java/properties/selenium.properties
+++ b/src/main/java/properties/selenium.properties
@@ -18,10 +18,10 @@ edge.browser.version = 15.15063
 
 #drivers Windows and macOS
 gecko.driver.windows.path=src/main/java/drivers/geckodriver.exe
-gecko.driver.macos.path=src/main/java/drivers/geckodriver_macOS
+gecko.driver.macos.path=src/main/java/drivers/geckodriver_macOS.exec
 
 chrome.driver.windows.path=src/main/java/drivers/chromedriver.exe
-chrome.driver.macos.path=src/main/java/drivers/chromedriver_macOS
+chrome.driver.macos.path=src/main/java/drivers/chromedriver_macOS.exec
 
 ie.driver.windows.path=src/main/java/drivers/IEDriverServer.exe
 ie64.driver.windows.path=src/main/java/drivers/IEDriverServer64.exe
